# muda

./: CMakeLists.txt  README.md  wt_config.xml.example
src/: CMakeLists.txt  dci.h  main.cpp  muda.h  roles.h  types.h
src/core/: context.h  dbc.cpp  dbc.h  dci.h  muda.h  roles.h  types.h  util.h
src/resource/: style.css
src/resources/: background.xcf  favicon.xcf  form.css  style.css  templates.xml
src/resources/fonts/: entypo.css
src/resources/images/: background.xcf
src/wtui/: mudalistwidget.cpp  mudalistwidget.h  mudawidget.cpp  mudawidget.h  ro_user.cpp  ro_user.h  romudalistwidget.cpp  romudalistwidget.h  romudawidget.cpp  romudawidget.h  rw_user.cpp  rw_user.h  session.cpp  session.h
